Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107794

REG->dev (6.5)/Windows: Crash when playing message dialog sound with NoSound Scheme

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.5.0 Beta1
    • 6.5.0 FF
    • QPA: Windows
    • None
    • Windows
    • 738e05a55a (qt/qtbase/dev) 738e05a55a (qt/tqtc-qtbase/dev)

    Description

      Set NoSound Scheme
      Start examples\widgets\dialogs\standarddialogs
      Choose any message dialog -> crash

      Most likely introduced by "QWinRegistryKey: refactor" 40523b68c14bf618bdc2d5438deebf34627be3af https://codereview.qt-project.org/c/qt/qtbase/+/428069

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes