tests/auto/corelib/kernel/qwinregistrykey/tst_qwinregistrykey.cpp
@@ -20,6 +20,7 @@ static const QPair<QStringView, quint32> TEST_DWORD = qMakePair(u"dword", 123);
 static const QPair<QStringView, quint64> TEST_QWORD = qMakePair(u"qword", 456);
 static const QPair<QStringView, QByteArray> TEST_BINARY = qMakePair(u"binary", "binary\0"_ba);
 static const QPair<QStringView, QVariant> TEST_NOT_EXIST = qMakePair(u"not_exist", QVariant());
+static const QPair<QStringView, QVariant> TEST_DEFAULT = qMakePair(u"Default", u"default"_s);
 
 [[nodiscard]] static inline bool write(const HKEY key, const QStringView name, const QVariant &value)
 {
@@ -124,6 +125,8 @@ void tst_qwinregistrykey::initTestCase()
         return;
     if (!write(key, TEST_BINARY.first, TEST_BINARY.second))
         return;
+    if (!write(key, TEST_DEFAULT.first, TEST_DEFAULT.second))
+        return;
     m_available = true;
 }
 
@@ -141,9 +144,10 @@ void tst_qwinregistrykey::cleanupTestCase()
     RegDeleteValueW(key, C_STR(TEST_DWORD.first));
     RegDeleteValueW(key, C_STR(TEST_QWORD.first));
     RegDeleteValueW(key, C_STR(TEST_BINARY.first));
+    RegDeleteValueW(key, C_STR(TEST_DEFAULT.first));
     #undef C_STR
-    RegCloseKey(key);
     RegDeleteKeyW(HKEY_CURRENT_USER, TEST_KEY);
+    RegCloseKey(key);
 }
 
 void tst_qwinregistrykey::qwinregistrykey()
@@ -204,6 +208,18 @@ void tst_qwinregistrykey::qwinregistrykey()
         const auto value = registry.value<QVariant>(TEST_NOT_EXIST.first);
         QVERIFY(!value.has_value());
         QCOMPARE(value.value_or(QVariant()), QVariant());
+    }
+
+    {
+        const auto value = registry.value<QString>(TEST_DEFAULT.first);
+        QVERIFY(value.has_value());
+        QCOMPARE(value.value_or(QString()), TEST_DEFAULT.second);
+    }
+
+    {
+        const auto value = registry.value<QString>(L"");
+        QVERIFY(value.has_value());
+        QCOMPARE(value.value_or(QString()), TEST_DEFAULT.second);
     }
 
     {
